# advent-of-code-2024

./: .gitignore  README.md  pyproject.toml
src/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
tests/: test_day_1.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_2.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
