[project]
name = "advent-of-code-2024"
version = "0.23.0"
description = "Solutions for Advent of Code 2024"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s"

[tool.ruff]
line-length = 88
target-version = "py312"

select = ["ALL"]
ignore = [
    "D",        # Ignore all docstring rules
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",     # Allow asserts in tests
    "PLR2004",  # Allow magic values in tests
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["src"]
